tests/idris2/error001/expected
1/1: Building Error (Error.idr)
Error: While processing right hand side of wrong. When unifying:
    a
and:
    Vect ?k ?a
Mismatch between: a and Vect ?k ?a.

Error:6:19--6:20
 2 |      Nil : Vect Z a
 3 |      (::) : a -> Vect k a -> Vect (S k) a
 4 | 
 5 | wrong : a -> Vect (S n) a -> Vect (S n) a
 6 | wrong x xs = x :: x
                       ^

